--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,15 @@
     "target": "es5",
     "lib": [
       "dom",
+      "ES6",
+      "DOM",
       "dom.iterable",
       "esnext"
+      
     ],
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
